# zed

./: Cargo.toml
crates/bookmarks/src/: bookmarks.rs
crates/breadcrumbs/: Cargo.toml
crates/breadcrumbs/src/: breadcrumbs.rs  breadcrumbspanel.rs  breadcrumbspopover.rs  breadcrumbsscrollbar.rs  popover.rs  scrollbar.rs
crates/client/src/: client.rs
crates/collab/src/: rpc.rs
crates/db/src/: db.rs
crates/diagnostics/src/: diagnostics.rs
crates/document_symbols/: Cargo.toml
crates/document_symbols/src/: document_symbols.rs
crates/editor/src/: actions.rs  editor.rs  editor_tests.rs  element.rs  items.rs  proposed_changes_editor.rs
crates/feature_flags/src/: feature_flags.rs
crates/fs/src/: fs.rs
crates/git/: Cargo.toml
crates/git/src/: repository.rs
crates/git_ui/src/: git_panel.rs  git_ui.rs
crates/gpui/: Cargo.toml
crates/language/src/: buffer.rs  buffer_tests.rs  language.rs
crates/languages/src/: go.rs  rust.rs
crates/project/src/: bookmark_store.rs  git.rs  lsp_command.rs  lsp_store.rs  project.rs
crates/project_panel/src/: project_panel.rs
crates/proto/proto/: lsp.proto  zed.proto
crates/proto/src/: proto.rs
crates/search/src/: project_search.rs
crates/settings/src/: settings_store.rs
crates/sqlez/src/: thread_safe_connection.rs
crates/sqlez_macros/src/: sqlez_macros.rs
crates/terminal_view/src/: terminal_view.rs
crates/text/src/: text.rs
crates/vim/src/: digraph.rs
crates/workspace/src/: item.rs  pane.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed_actions/src/: lib.rs
(+7 files in other folders)
