[package]
name = "breadcrumbs"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/breadcrumbs.rs"
doctest = false

[dependencies]
anyhow.workspace = true
client.workspace = true
collections.workspace = true
editor.workspace = true
file_icons.workspace = true
menu.workspace = true
gpui.workspace = true
itertools.workspace = true
outline.workspace = true
theme.workspace = true
ui.workspace = true
project.workspace = true
serde.workspace = true
workspace.workspace = true
util.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
